syntax = "proto3";

package protobuf;

option php_namespace = "App\\Event\\ProtoBuf";
option php_metadata_namespace = "App\\Event\\Metadata";

message UserCreated {
  string userName = 1;
  string email = 2;
  string userID = 3;
  int64 version = 4;
}
